syntax = "proto3";

package orchestration_service;

service JobService {
    rpc CreateJob(CreateJobRequest) returns (Acknowledgement) {}
    rpc AddTaskToJob(AddTaskToJobRequest) returns (Acknowledgement) {}
    rpc NotifyJob(NotifyJobRequest) returns (Acknowledgement) {}
}

service TaskService {
    rpc TaskCompleted(TaskCompletedRequest) returns (Acknowledgement) {}
    rpc TaskError(TaskErrorRequest) returns (Acknowledgement) {}
}

message CreateJobRequest {
    string job_name = 1;
    string notification_endpoint = 2;
    map<string, string> initial_job_data = 3;
}

message AddTaskToJobRequest {
    string job_id = 1;
    string task_name = 2;
}

message NotifyJobRequest {
    string task_id = 1;
    string job_id = 2;
    map<string, string> notification = 3;
}

message TaskCompletedRequest {
    string task_id = 1;
    string job_id = 2;
}

message TaskErrorRequest {
    string task_id = 1;
    string job_id = 2;
    string error_message = 3;
}

message Acknowledgement {
    bool success = 1;
}

